# mennenwoodAI

./: README.md  pyproject.toml
src/: game.py  main.py  ship.py  wsim_dataclasses.py  wsim_enums.py
tests/: test_game.py  test_ship.py
